// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField renders correctly when checked 1`] = `
.c0 {
  width: 100%;
}

.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<label
  className="form_field foo"
>
  <div
    className="checkbox_icon"
  >
    <svg
      aria-hidden="true"
      className="sc-AxmLO c0"
      fill="currentColor"
      version="1.1"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8m0-5H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <input
    checked={true}
    className="input_field accessibly_hidden"
    type="checkbox"
  />
  <div
    className="label_text"
  >
    Check Box 1
  </div>
</label>
`;

exports[`CheckboxField renders correctly when unchecked 1`] = `
.c0 {
  width: 100%;
}

.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<label
  className="form_field foo"
>
  <div
    className="checkbox_icon"
  >
    <svg
      aria-hidden="true"
      className="sc-AxmLO c0"
      fill="currentColor"
      version="1.1"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m0 2v14H5V5h14z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <input
    checked={false}
    className="input_field accessibly_hidden"
    type="checkbox"
  />
  <div
    className="label_text"
  >
    Check Box 1
  </div>
</label>
`;

exports[`DropdownField renders correctly with a falsey value 1`] = `
.c0 {
  width: 100%;
}

.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  className="foo"
>
  <div
    className="dropdown_field"
  >
    <select
      className="dropdown"
      value=""
    >
      <option
        disabled={false}
        value=""
      >
        
      </option>
      <option
        disabled={false}
        value="dna"
      >
        DNA
      </option>
      <option
        disabled={false}
        value="rna"
      >
        RNA
      </option>
      <option
        disabled={false}
        value="protein"
      >
        Protein
      </option>
    </select>
    <div
      className="dropdown_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    className="input_caption"
  >
    <span />
  </div>
</div>
`;

exports[`DropdownField renders correctly with a value 1`] = `
.c0 {
  width: 100%;
}

.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  className="foo"
>
  <div
    className="dropdown_field"
  >
    <select
      className="dropdown"
      value="rna"
    >
      <option
        disabled={false}
        value="dna"
      >
        DNA
      </option>
      <option
        disabled={false}
        value="rna"
      >
        RNA
      </option>
      <option
        disabled={false}
        value="protein"
      >
        Protein
      </option>
    </select>
    <div
      className="dropdown_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    className="input_caption"
  >
    <span />
  </div>
</div>
`;

exports[`FormGroup renders correctly 1`] = `
<div
  className="foo"
>
  <div
    className="form_group_label"
  >
    This is the label
  </div>
  <div>
    Hey test here
  </div>
  <div>
    More test here
  </div>
</div>
`;

exports[`InputField renders correctly 1`] = `
<label
  className="form_field"
>
  <div
    className="label_text"
  >
    Input field
  </div>
  <div
    className="input_field_container"
  >
    <div
      className="input_field"
    >
      <input
        placeholder="Placeholder Text"
        type="text"
        value=""
      />
      <div
        className="suffix"
      >
        μL
      </div>
    </div>
    <div
      className="input_caption"
    >
      <span />
      <span
        className="right"
      />
    </div>
  </div>
</label>
`;

exports[`RadioGroup renders correctly inline 1`] = `
.c0 {
  width: 100%;
}

.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  className=""
>
  <label
    className="form_field"
  >
    <div
      className="checkbox_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <input
      checked={false}
      className="input_field accessibly_hidden"
      type="radio"
      value="hazelnut"
    />
    <div
      className="label_text"
    >
      Hazelnut
    </div>
  </label>
  <label
    className="form_field"
  >
    <div
      className="checkbox_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20a8 8 0 0 1-8-8 8 8 0 0 1 8-8 8 8 0 0 1 8 8 8 8 0 0 1-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10 10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 5a5 5 0 0 0-5 5 5 5 0 0 0 5 5 5 5 0 0 0 5-5 5 5 0 0 0-5-5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <input
      checked={true}
      className="input_field accessibly_hidden"
      type="radio"
      value="chocolate"
    />
    <div
      className="label_text"
    >
      Chocolate
    </div>
  </label>
  <label
    className="form_field"
  >
    <div
      className="checkbox_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <input
      checked={false}
      className="input_field accessibly_hidden"
      type="radio"
      value="ginger"
    />
    <div
      className="label_text"
    >
      Ginger
    </div>
  </label>
</div>
`;

exports[`RadioGroup renders correctly with checked value 1`] = `
.c0 {
  width: 100%;
}

.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  className=""
>
  <label
    className="form_field"
  >
    <div
      className="checkbox_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <input
      checked={false}
      className="input_field accessibly_hidden"
      type="radio"
      value="hazelnut"
    />
    <div
      className="label_text"
    >
      Hazelnut
    </div>
  </label>
  <label
    className="form_field"
  >
    <div
      className="checkbox_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20a8 8 0 0 1-8-8 8 8 0 0 1 8-8 8 8 0 0 1 8 8 8 8 0 0 1-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10 10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 5a5 5 0 0 0-5 5 5 5 0 0 0 5 5 5 5 0 0 0 5-5 5 5 0 0 0-5-5z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <input
      checked={true}
      className="input_field accessibly_hidden"
      type="radio"
      value="chocolate"
    />
    <div
      className="label_text"
    >
      Chocolate
    </div>
  </label>
  <label
    className="form_field"
  >
    <div
      className="checkbox_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <input
      checked={false}
      className="input_field accessibly_hidden"
      type="radio"
      value="ginger"
    />
    <div
      className="label_text"
    >
      Ginger
    </div>
  </label>
</div>
`;

exports[`RadioGroup renders correctly with no checked value 1`] = `
.c0 {
  width: 100%;
}

.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  className=""
>
  <label
    className="form_field"
  >
    <div
      className="checkbox_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <input
      checked={false}
      className="input_field accessibly_hidden"
      type="radio"
      value="hazelnut"
    />
    <div
      className="label_text"
    >
      Hazelnut
    </div>
  </label>
  <label
    className="form_field"
  >
    <div
      className="checkbox_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <input
      checked={false}
      className="input_field accessibly_hidden"
      type="radio"
      value="chocolate"
    />
    <div
      className="label_text"
    >
      Chocolate
    </div>
  </label>
  <label
    className="form_field"
  >
    <div
      className="checkbox_icon"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <input
      checked={false}
      className="input_field accessibly_hidden"
      type="radio"
      value="ginger"
    />
    <div
      className="label_text"
    >
      Ginger
    </div>
  </label>
</div>
`;
